Include integration tests in sonarqube.

--- a/build.gradle
+++ b/build.gradle
@@ -254,6 +254,7 @@ jar {
 sonarqube {
     properties {
         property "sonar.host.url",  "http://sonarqube.dei.isep.ipp.pt:9000"   // The url of the sonarqube server
+        properties["sonar.tests"] += sourceSets.acceptanceTest.allSource.srcDirs
     }
 }
 
