#LAPR4E17DL-113 #time 3h #comment IPC02.1 implementation - Empty Sidebar creation

--- a/src/main/resources/csheets/res/extensions.props
+++ b/src/main/resources/csheets/res/extensions.props
@@ -3,5 +3,6 @@ csheets.ext.deptree.DependencyTreeExtension
 csheets.ext.simple.ExtensionExample
 lapr4.white.s1.core.n1234567.comments.CommentsExtension
 lapr4.white.s1.core.n4567890.contacts.ContactsExtension
+lapr4.green.s1.ipc.n1970581.findworkbook.SearchWorkbookExtension
 
 
