LAPR4E17DL-30 LAPR4E17DL-106 Add some verification to the atributtes of Contact, Event and Agenda, Add some unit tests

--- a/src/main/resources/csheets/res/extensions.props
+++ b/src/main/resources/csheets/res/extensions.props
@@ -4,5 +4,5 @@ csheets.ext.simple.ExtensionExample
 lapr4.white.s1.core.n1234567.comments.CommentsExtension
 lapr4.white.s1.core.n4567890.contacts.ContactsExtension
 lapr4.green.s1.ipc.n1970581.findworkbook.SearchWorkbookExtension
-
+lapr4.red.s1.core.n1140388.contacts.EventsExtension
 
