#LAPR4E17DL-51 #LAPR4E17DL-130 #time 2h #comment LANG01.1 implementation concluded

--- a/src/main/resources/csheets/res/compilers.props
+++ b/src/main/resources/csheets/res/compilers.props
@@ -1,2 +1,3 @@
 # ExcelExpressionCompiler
-lapr4.gray.s1.lang.n3456789.formula.compiler.ExcelExpressionCompiler
+# lapr4.gray.s1.lang.n3456789.formula.compiler.ExcelExpressionCompiler
+lapr4.blue.s1.lang.n1141233.formula.compiler.ExcelExpressionCompiler
