--- a/src/main/resources/csheets/res/extensions.props
+++ b/src/main/resources/csheets/res/extensions.props
@@ -5,4 +5,4 @@ lapr4.white.s1.core.n1234567.comments.CommentsExtension
 lapr4.white.s1.core.n4567890.contacts.ContactsExtension
 lapr4.green.s1.ipc.n1970581.findworkbook.SearchWorkbookExtension
 lapr4.red.s1.core.n1140388.contacts.EventsExtension
-
+lapr4.red.s1.core.n1131106.extensionsmanager.ManagerExtension
