--- a/src/main/resources/csheets/res/extensions.props
+++ b/src/main/resources/csheets/res/extensions.props
@@ -7,3 +7,4 @@ lapr4.green.s1.ipc.n1130626.importexporttext.ExtensionImportExportText
 lapr4.green.s1.ipc.n1970581.findworkbook.SearchWorkbookExtension
 lapr4.red.s1.core.n1140388.contacts.EventsExtension
 lapr4.red.s1.core.n1131106.extensionsmanager.ManagerExtension
+lapr4.blue.s1.lang.n1140956.ConditionalFormatting.FormattingExtension
