#LAPR4E17DL-119 #comment IPC01.1: Cells Sharing - Start Sharing: Implementation continuation

--- a/src/main/resources/csheets/res/extensions.props
+++ b/src/main/resources/csheets/res/extensions.props
@@ -10,3 +10,4 @@ lapr4.red.s1.core.n1131106.extensionsmanager.ManagerExtension
 lapr4.blue.s1.lang.n1140956.ConditionalFormatting.FormattingExtension
 lapr4.green.s1.ipc.n1151211.comm.CommExtension2
 lapr4.green.s1.ipc.n1140618.ChatApplication.ChatExtension
+lapr4.green.s1.ipc.n1151211.StartSharing.StartSharingExtension
