--- a/src/main/resources/csheets/res/compilers.props
+++ b/src/main/resources/csheets/res/compilers.props
@@ -1,3 +1,4 @@
 # ExcelExpressionCompiler
 # lapr4.gray.s1.lang.n3456789.formula.compiler.ExcelExpressionCompiler
 lapr4.blue.s1.lang.n1141233.formula.compiler.ExcelExpressionCompiler
+lapr4.red.s2.lang.n1140388.formula.compiler.MonetaryExpressionCompiler
