--- a/src/main/resources/csheets/res/extensions.props
+++ b/src/main/resources/csheets/res/extensions.props
@@ -11,3 +11,4 @@ lapr4.blue.s1.lang.n1140956.ConditionalFormatting.FormattingExtension
 lapr4.green.s1.ipc.n1151211.comm.CommExtension2
 lapr4.green.s1.ipc.n1140618.ChatApplication.ChatExtension
 lapr4.green.s1.ipc.n1151211.StartSharing.StartSharingExtension
+lapr4.green.s2.core.n1130626.insertimage.ImagesExtension
