#LAPR4E17DL-161 #time 1h #comment Core01.2 Implementation: of MEtadatable interface in Extension class. Extension now suports Metadata and has a new constructor.

--- a/src/main/resources/csheets/res/extensions.props
+++ b/src/main/resources/csheets/res/extensions.props
@@ -12,3 +12,4 @@ lapr4.green.s1.ipc.n1151211.comm.CommExtension2
 lapr4.green.s1.ipc.n1140618.ChatApplication.ChatExtension
 lapr4.green.s1.ipc.n1151211.StartSharing.StartSharingExtension
 lapr4.green.s2.core.n1130626.insertimage.ImagesExtension
+lapr4.green.s2.core.n1970581.autodescriptionextensions.ExtensionExample2
