#LAPR4E17DL-119 #comment  Core10.1.2: Company Contact: Design continuation

--- a/src/main/resources/csheets/res/extensions.props
+++ b/src/main/resources/csheets/res/extensions.props
@@ -14,4 +14,4 @@ lapr4.green.s1.ipc.n1151211.StartSharing.StartSharingExtension
 lapr4.green.s2.core.n1130626.insertimage.ImagesExtension
 lapr4.green.s2.core.n1970581.autodescriptionextensions.ExtensionExample2
 lapr4.blue.s2.ipc.n1140953.sharing.ui.SharingAutomaticUpdateExtension
-lapr4.green.s2.core.n1151211.CompanyContact.CompanyContactExtension
+lapr4.green.s2.core.n1151211.companycontactx.CompanyContactExtension
