--- a/src/main/resources/csheets/res/extensions.props
+++ b/src/main/resources/csheets/res/extensions.props
@@ -14,3 +14,4 @@ lapr4.green.s1.ipc.n1151211.StartSharing.StartSharingExtension
 lapr4.green.s2.core.n1130626.insertimage.ImagesExtension
 lapr4.green.s2.core.n1970581.autodescriptionextensions.ExtensionExample2
 lapr4.green.s2.core.n1151211.companycontactx.CompanyContactExtension
+lapr4.red.s3.ipc.n1140388.chatrooms.ChatRoomExtension
