#LAPR4E17DL-208 #time 3h grammar tranfer to new package #comment Core01.2 Implementation: grammar tranfer to new package

--- a/src/main/resources/csheets/res/compilers.props
+++ b/src/main/resources/csheets/res/compilers.props
@@ -1,4 +1,5 @@
 # ExcelExpressionCompiler
 # lapr4.gray.s1.lang.n3456789.formula.compiler.ExcelExpressionCompiler
-lapr4.blue.s1.lang.n1141233.formula.compiler.ExcelExpressionCompiler
+#lapr4.blue.s1.lang.n1141233.formula.compiler.ExcelExpressionCompiler
 lapr4.red.s2.lang.n1140388.formula.compiler.MonetaryExpressionCompiler
+lapr4.green.s3.lang.n1970581.arraysandvariableeditor.compiler.ExcelExpressionCompiler
