#LAPR4E17DL-208 #time 1h 30m Empty Sidebar creation #comment Core01.2 Implementation: of Empty Sidebar, UI + controllers barebones skeleton.

--- a/src/main/resources/csheets/res/extensions.props
+++ b/src/main/resources/csheets/res/extensions.props
@@ -16,3 +16,4 @@ lapr4.green.s2.core.n1970581.autodescriptionextensions.ExtensionExample2
 lapr4.green.s2.core.n1151211.companycontactx.CompanyContactExtension
 lapr4.red.s3.ipc.n1140388.chatrooms.ChatRoomExtension
 lapr4.blue.s3.core.n1140953.address.AddressExtension
+lapr4.green.s3.lang.n1970581.arraysandvariableeditor.VariableEditorExtension
