--- a/src/main/resources/csheets/res/extensions.props
+++ b/src/main/resources/csheets/res/extensions.props
@@ -18,5 +18,5 @@ lapr4.red.s3.ipc.n1140388.chatrooms.ChatRoomExtension
 lapr4.blue.s3.core.n1140953.address.AddressExtension
 lapr4.green.s3.lang.n1970581.arraysandvariableeditor.VariableEditorExtension
 lapr4.blue.s3.core.n1141233.image.insertimage.ImagesExtension
-
+lapr4.blue.s3.core.n1140948.contactstag.ContactsTagExtension
 lapr4.blue.s3.core.n1140956.WorkbookSearch.SearchExtension
